--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <!-- Portfolio Modal 2-->
         <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" aria-labelledby="portfolioModal2" aria-hidden="true">
             <div class="modal-dialog modal-xl">
-                <div class="modal-content"
+                <div class="modal-content">
                     <div class="modal-body text-center pb-5">
                         <div class="container">
                             <div class="row justify-content-center">
